--- a/Festival/1D.html
+++ b/Festival/1D.html
@@ -27,6 +27,7 @@
         </nav>
     </header>
     <main>
+        <h5>ÉÉNMALIG</h5>
         <section id="artists">
             <div class="container2">
                 <div class="grid-card">
@@ -45,7 +46,8 @@
                     <div class="icons">
                         <a href="https://www.youtube.com/channel/UCb2HGwORFBo94DmRx4oLzow"><i
                                 class="fa-brands fa-youtube"></i></a><br>
-                        <a href="https://open.spotify.com/artist/4AK6F7OLvEQ5QYCBNiQWHq"></i></a><br>
+                        <a href="https://open.spotify.com/artist/4AK6F7OLvEQ5QYCBNiQWHq"><i
+                                class="fa-brands fa-spotify"></i></a><br>
                         <a href="https://www.onedirectionmusic.com/gb/home.html"><i
                                 class="fa-solid fa-globe"></i></a><br>
                         <a href="https://www.instagram.com/onedirection/?hl=nl"><i
