--- a/Festival/index.html
+++ b/Festival/index.html
@@ -52,10 +52,10 @@
                         <figure>
                             <img src="static/Assets/1D.jpg" alt="One Direction">
                     </a>
-                    <figcaption>
+                    <a href="1D.html"><figcaption>
                         <span> ÉÉNMALIG </span>
                     </figcaption>
-                    </figure>
+                    </figure></a>
                     <a href="1D.html">
                         <h1>One Direction</h1>
                         <h2>Main Stage, 19u30 - 21u30</h2>
