--- a/Festival/index.html
+++ b/Festival/index.html
@@ -16,6 +16,10 @@
         <div class="logo">
             <img src="static/Assets/Logo/logo_huisstijl_SenneCoen_GEEL.svg" alt="Logo">
         </div>
+        <input type="checkbox" id="burger">
+        <label for="burger">
+            <i class="fa-solid fa-bars"></i>
+        </label>
         <nav>
             <ul>
                 <li><a href="index.html">Line-Up</a></li>
@@ -52,10 +56,12 @@
                         <figure>
                             <img src="static/Assets/1D.jpg" alt="One Direction">
                     </a>
-                    <a href="1D.html"><figcaption>
-                        <span> ÉÉNMALIG </span>
-                    </figcaption>
-                    </figure></a>
+                    <a href="1D.html">
+                        <figcaption>
+                            <span> ÉÉNMALIG </span>
+                        </figcaption>
+                        </figure>
+                    </a>
                     <a href="1D.html">
                         <h1>One Direction</h1>
                         <h2>Main Stage, 19u30 - 21u30</h2>
