--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </section>
   </main>
   <footer>
-    <p><a href="https://senne-coen-5mma.github.io/Script/" target="_blank" class="footer">senne-coen-5mma op GitHub</a>
+    <p><a href="https://senne-coen-5mma.github.io/Script/" target="_self" class="footer">senne-coen-5mma op GitHub</a>
     </p>
   </footer>
 
