--- a/index.html
+++ b/index.html
@@ -22,9 +22,11 @@
         <p>Ik ben 16 jaar. <br> Geboren op 21/11/2006
         </p>
       </div>
-      <div class="col-right">
+      <div class="col-up">
         <h2>Mijn pagina's!</h2>
-        <p>Hieronder ontdek je al mijn websites.</p>
+      </div>
+      <div class="col-mid">
+        <p>Hieronder ontdek je al mijn websites van de lessen bij mnr. Vander Cruyssen.</p>
         <ul>
           <li><a href="https://senne-coen-5mma.github.io/Script/senne_coen-loki" target="_blank"
               class="artikel">Artikel</a></li>
@@ -35,8 +37,17 @@
           </li>
           <li><a href="https://senne-coen-5mma.github.io/Script/Brandshop" target="_blank"
               class="brandshop">Brandshop</a></li>
-          <li><a href="https://senne-coen-5mma.github.io/Script/Festival" target="_blank"
-              class="festival">Festival</a></li>
+          <li><a href="https://senne-coen-5mma.github.io/Script/Festival" target="_blank" class="festival">Festival</a>
+          </li>
+          <li><a href="" target="_blank" class="andere">...</a></li>
+        </ul>
+      </div>
+      <div class="col-right">
+        <ul>
+          <p>Hieronder ontdek je al mijn websites van de lessen bij mnr. Vandersmissen.</p>
+          <li><a href="AI.html" target="_blank" class="websitemetAI">Website met AI</a></li>
+          <li><a href="bootstrap.html" target="_blank" class="bootstrap">Bootstrap</a></li>
+          <li><a href="Owls.html" target="_blank" class="jquery">Jquery</a></li>
           <li><a href="" target="_blank" class="andere">...</a></li>
         </ul>
       </div>
