--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
       <div class="col-right">
         <ul>
           <p>Hieronder ontdek je al mijn websites van de lessen bij mnr. Vandersmissen.</p>
-          <li><a href="AI.html" target="_blank" class="websitemetAI">Website met AI</a></li>
-          <li><a href="bootstrap.html" target="_blank" class="bootstrap">Bootstrap</a></li>
-          <li><a href="Owls.html" target="_blank" class="jquery">Jquery</a></li>
+          <li><a href="Webdesign/AI_SenneCoen_5MMa/AI.html" target="_blank" class="websitemetAI">Website met AI</a></li>
+          <li><a href="Webdesign/Bootstrap/bootstrap.html" target="_blank" class="bootstrap">Bootstrap</a></li>
+          <li><a href="Webdesign/JQuery/Owls.html" target="_blank" class="jquery">Jquery</a></li>
           <li><a href="" target="_blank" class="andere">...</a></li>
         </ul>
       </div>
