--- a/index.html
+++ b/index.html
@@ -22,12 +22,8 @@
         <p>Ik ben 16 jaar. <br> Geboren op 21/11/2006
         </p>
       </div>
-      <div class="col-up">
-        <h2>Mijn pagina's!</h2>
-      </div>
-      <div class="col-mid">
-        <p>Hieronder ontdek je al mijn websites van de lessen bij mnr. Vander Cruyssen.</p>
-        <ul>
+      <div class="col-right">
+        <h2>Mijn pagina's!</h2><ul>
           <li><a href="https://senne-coen-5mma.github.io/Script/senne_coen-loki" target="_blank"
               class="artikel">Artikel</a></li>
           <li><a href="https://senne-coen-5mma.github.io/Script/senne_coen-htmlmatchapp" target="_blank"
@@ -39,15 +35,6 @@
               class="brandshop">Brandshop</a></li>
           <li><a href="https://senne-coen-5mma.github.io/Script/Festival" target="_blank" class="festival">Festival</a>
           </li>
-          <li><a href="" target="_blank" class="andere">...</a></li>
-        </ul>
-      </div>
-      <div class="col-right">
-        <ul>
-          <p>Hieronder ontdek je al mijn websites van de lessen bij mnr. Vandersmissen.</p>
-          <li><a href="Webdesign/AI_SenneCoen_5MMa/AI.html" target="_blank" class="websitemetAI">Website met AI</a></li>
-          <li><a href="Webdesign/Bootstrap/bootstrap.html" target="_blank" class="bootstrap">Bootstrap</a></li>
-          <li><a href="Webdesign/JQuery/Owls.html" target="_blank" class="jquery">Jquery</a></li>
           <li><a href="" target="_blank" class="andere">...</a></li>
         </ul>
       </div>
