--- a/Festival/Alec.html
+++ b/Festival/Alec.html
@@ -17,6 +17,10 @@
         <div class="logo">
             <img src="static/Assets/Logo/logo_huisstijl_SenneCoen_GEEL.svg" alt="Logo">
         </div>
+        <input type="checkbox" id="burger">
+        <label for="burger">
+            <i class="fa-solid fa-bars"></i>
+        </label>
         <nav>
             <ul>
                 <li><a href="index.html">Line-Up</a></li>
