--- a/HeroHeader/Kreed.html
+++ b/HeroHeader/Kreed.html
@@ -1,24 +1,57 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="initial-scale=1, width=device-width" />
 
-<head>
-    <link rel="stylesheet" href="Kreed.css">
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');
-    </style>
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
-    </style>
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap');
-      </style>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<a href="HeroHeader/logo.html"></a> 
-<body>
+    <link rel="stylesheet" href="./global.css" />
+    <link rel="stylesheet" href="./index.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap"
+    />
+  </head>
+  <body>
+    <div class="hero-13">
+      <div class="hero-13-child"></div>
+      <img class="skull-icon" alt="" src="./public/skull.svg" />
 
-</body>
-
+      <div class="ghost-in-the-shell-parent">
+        <b class="ghost-in-the">Ghost in the Shell</b>
+        <div class="lorem-ipsum-dolor">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+          minim veniam, quis nostrud exercitation
+        </div>
+      </div>
+      <div class="button">
+        <div class="button-child"></div>
+        <div class="watch-now-parent">
+          <div class="watch-now">Watch Now</div>
+          <img class="group-child" alt="" src="./public/group-460.svg" />
+        </div>
+      </div>
+      <div class="scroll">
+        <div class="scroll1">
+          <div class="scroll-child"></div>
+          <img class="scroll-item" alt="" src="./public/vector-6.svg" />
+        </div>
+        <div class="scroll2">Scroll</div>
+      </div>
+      <div class="top-navigation">
+        <div class="logo">
+          <div class="kreed">Kreed</div>
+          <div class="rectangle-parent">
+            <div class="group-item"></div>
+            <img class="k-icon" alt="" src="./public/k.svg" />
+          </div>
+        </div>
+        <div class="home-about-us">Home About us How it works Contact</div>
+        <div class="rectangle-group">
+          <div class="group-inner"></div>
+          <div class="lets-talk">Login</div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
