--- a/HeroHeader/Kreed.html
+++ b/HeroHeader/Kreed.html
@@ -13,7 +13,7 @@
   <body>
     <div class="hero-13">
       <div class="hero-13-child"></div>
-      <img class="skull-icon" alt="" src="./public/skull.svg" />
+      <img class="skull-icon" alt="Pumpkin" src="HeroHeader/Pumpkin.html" />
 
       <div class="ghost-in-the-shell-parent">
         <b class="ghost-in-the">Ghost in the Shell</b>
