--- a/HeroHeader/Kreed.html
+++ b/HeroHeader/Kreed.html
@@ -41,7 +41,14 @@
           <img class="k-icon" src="./public/k.svg">
         </div>
       </div>
-      <div class="home-about-us">Home About us How it works Contact</div>
+      <div class="home-about-us">
+        <ul class="mid">
+          <li>Home</li>
+          <li>About us</li>
+          <li>How it works</li>
+          <li>Contact</li>
+        </ul>
+      </div>
       <div class="login">
         <div class="button2"></div>
         <div class="login1">Login</div>
