--- a/HeroHeader/first.html
+++ b/HeroHeader/first.html
@@ -4,14 +4,14 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="initial-scale=1, width=device-width">
-  <link rel="stylesheet" href="./kreed.css">
+  <link rel="stylesheet" href="./first.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap">
 </head>
 
 <body>
   <div class="hero-13">
     <div class="background"></div>
-    <img class="skull-icon" src="pictures/pumpkin.png">
+    <img class="skull-icon" src="pictures/pumpkin.psd">
     <div class="text">
       <b class="ghost-in-the">Ghost in the Shell</b>
       <div class="lorem-ipsum-dolor">
@@ -44,7 +44,7 @@
       <div class="home-about-us">
         <ul class="mid">
           <li>Home</li>
-          <li>About us</li>
+          <li>About us z</li>
           <li>How it works</li>
           <li>Contact</li>
         </ul>
