--- a/HeroHeader/kreed.html
+++ b/HeroHeader/kreed.html
@@ -25,13 +25,19 @@
             <div class="login">Login</div>
         </div>
     </header>
-    <div class="flex">
+    <section id="text">
+        <div class="flex-container">
+            <div class="flex-item">
+                <h1 class="ghost-in-the">Ghost in the Shell</h1>
+                <div class="lorem-ipsum-dolor">
+                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni facilis voluptas fuga, quo rem
+                        soluta provident dolorum, sit fugiat in deserunt expedita illo tempore. Nostrum ullam totam
+                        saepe nobis illo.
+                    </p>
+                </div>
 
-
-    </div>
+            </div>
+    </section>
 </body>
-<footer>
-
-</footer>
 
 </html>
