--- a/HeroHeader/kreed.html
+++ b/HeroHeader/kreed.html
@@ -35,9 +35,17 @@
                         saepe nobis illo.
                     </p>
                 </div>
-
             </div>
+            <div class="flex-item">
+                <p>Watch Now</p>
+            </div>
+        </div>
     </section>
+    <section id="pumpkin">
+        <img src="pictures/pumpkin.png" alt="">
+    </section>
+    <section id="scroll"><p>Scroll</p></section>
+
 </body>
 
 </html>
