--- a/HeroHeader/kreed.html
+++ b/HeroHeader/kreed.html
@@ -1,51 +1,57 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="initial-scale=1, width=device-width" />
 
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="initial-scale=1, width=device-width">
-    <link rel="stylesheet" href="./kreed.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap">
-</head>
+    <link rel="stylesheet" href="./global.css" />
+    <link rel="stylesheet" href="./index.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap"
+    />
+  </head>
+  <body>
+    <div class="hero-13">
+      <div class="background"></div>
+      <img class="skull-icon" alt="" src="./public/skull.svg" />
 
-<body>
-    <header class="navigation">
-        <div class="flex-container">
-            <div class="logo">
-                <img src="pictures/logo.psd" alt="logo Kreed">
-            </div>
-            <nav class="navigation">
-                <ul class="mid">
-                    <li class="navigation">Home</li>
-                    <li class="navigation">About us</li>
-                    <li class="navigation">How it works</li>
-                    <li class="navigation">Contact</li>
-                </ul>
-            </nav>
-            <div class="login">Login</div>
+      <div class="text">
+        <b class="ghost-in-the">Ghost in the Shell</b>
+        <div class="lorem-ipsum-dolor">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+          minim veniam, quis nostrud exercitation
         </div>
-    </header>
-    <section id="text">
-        <div class="flex-container">
-            <div class="flex-item">
-                <h1 class="ghost-in-the">Ghost in the Shell</h1>
-                <div class="lorem-ipsum-dolor">
-                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni facilis voluptas fuga, quo rem
-                        soluta provident dolorum, sit fugiat in deserunt expedita illo tempore. Nostrum ullam totam
-                        saepe nobis illo.
-                    </p>
-                </div>
-            </div>
-            <div class="flex-item">
-                <p>Watch Now</p>
-            </div>
+      </div>
+      <div class="button">
+        <div class="button1"></div>
+        <div class="watch-now-button">
+          <div class="watch-now">Watch Now</div>
+          <img class="play-sign-icon" alt="" src="./public/play-sign.svg" />
         </div>
-    </section>
-    <section id="pumpkin">
-        <img src="pictures/pumpkin.png" alt="">
-    </section>
-    <section id="scroll"><p>Scroll</p></section>
-
-</body>
-
+      </div>
+      <div class="scroll">
+        <div class="cpu-mouse">
+          <div class="round"></div>
+          <img class="klik-icon" alt="" src="./public/klik.svg" />
+        </div>
+        <div class="scroll1">Scroll</div>
+      </div>
+      <div class="navigation">
+        <div class="logo">
+          <div class="kreed">Kreed</div>
+          <div class="logo1">
+            <div class="rectangle-around-logo"></div>
+            <img class="k-icon" alt="" src="./public/k.svg" />
+          </div>
+        </div>
+        <div class="home-about-us">Home About us How it works Contact</div>
+        <div class="login">
+          <div class="button2"></div>
+          <div class="login1">Login</div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
