--- a/HeroHeader/kreed.html
+++ b/HeroHeader/kreed.html
@@ -13,7 +13,7 @@
   <body>
     <div class="hero-13">
       <div class="background"></div>
-      <img class="skull-icon" alt="" src="./public/skull.svg" />
+      <img class="skull-icon" alt="" src="/HeroHeader/Group 38.png"/><img class="skull-icon" alt="" src="/HeroHeader/stuff.png"/>
 
       <div class="text">
         <b class="ghost-in-the">Ghost in the Shell</b>
@@ -27,13 +27,13 @@
         <div class="button1"></div>
         <div class="watch-now-button">
           <div class="watch-now">Watch Now</div>
-          <img class="play-sign-icon" alt="" src="./public/play-sign.svg" />
+          <img class="play-sign-icon" alt="" src="/HeroHeader/playsign.png" />
         </div>
       </div>
       <div class="scroll">
         <div class="cpu-mouse">
           <div class="round"></div>
-          <img class="klik-icon" alt="" src="./public/klik.svg" />
+          <img class="klik-icon" alt="" src="/HeroHeader/playsign.png" />
         </div>
         <div class="scroll1">Scroll</div>
       </div>
@@ -42,7 +42,7 @@
           <div class="kreed">Kreed</div>
           <div class="logo1">
             <div class="rectangle-around-logo"></div>
-            <img class="k-icon" alt="" src="./public/k.svg" />
+            <img class="k-icon" alt="" src="/HeroHeader/K..png" />
           </div>
         </div>
         <div class="home-about-us">Home About us How it works Contact</div>
