--- a/Voorbeelden/flexbox/flexbox.html
+++ b/Voorbeelden/flexbox/flexbox.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your Website</title>
-    <link rel="stylesheet" href="style.css">    
+    <link rel="stylesheet" href="flexbox.css">
 </head>
+
 <body>
     <header>
         <img src="oceanLogo.png" alt="Your Logo" class="logo">
@@ -22,4 +24,5 @@
         <a href="#" class="cta-button">Get Started</a>
     </section>
 </body>
+
 </html>
