--- a/ResponsiveDesign/Responsive2/start responsive template/start responsive template/gardening.html
+++ b/ResponsiveDesign/Responsive2/start responsive template/start responsive template/gardening.html
@@ -14,7 +14,7 @@
 <body>
     <div class="container">
         <header>
-            
+
             <nav class="navbar">
                 <div class="logo">
                     <a href="#">
@@ -36,7 +36,7 @@
         </header>
         <div class="hero">
             <div class="hero_img">
-                <img src="img/hero.png" alt="">
+                <img src="img/foto_man.png" alt="">
             </div>
             <div class="hero_txt">
                 <h2 class="name">Gabriel Pires</h2>
@@ -50,13 +50,13 @@
 </body>
 <script type="text/javascript">
     function toggleMenu() {
-    const navLinks = document.getElementById("navLinks");
-    if (navLinks.style.display === "block") {
-        navLinks.style.display = "none";
-    } else {
-        navLinks.style.display = "block";
+        const navLinks = document.getElementById("navLinks");
+        if (navLinks.style.display === "block") {
+            navLinks.style.display = "none";
+        } else {
+            navLinks.style.display = "block";
+        }
     }
-}
 
 </script>
 
