--- a/HeroHeader/kreed.html
+++ b/HeroHeader/kreed.html
@@ -12,8 +12,12 @@
 <body>
   <div class="hero-13">
     <div class="background"></div>
-    <img class="skull-icon" alt="" src="img/Group 38.png" /><img class="skull-icon" alt=""
-      src="img/stuff.png" />
+    <img class="skull-icon" alt="" src="img/Group 38.png" /><img class="skull-icon" alt="" src="img/stuff.png" />
+    <div class="hamburger" onclick="toggleMenu()">
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
 
     <div class="text">
       <b class="ghost-in-the">Ghost in the Shell</b>
@@ -53,5 +57,15 @@
     </div>
   </div>
 </body>
+<script type="text/javascript">ww
+  function toggleMenu() {
+    const navLinks = document.getElementById("navLinks");
+    if (navLinks.style.display === "block") {
+      navLinks.style.display = "none";
+    } else {
+      navLinks.style.display = "block";
+    }
+  }
+</script>
 
 </html>
