--- a/HeroHeader/kreed.html
+++ b/HeroHeader/kreed.html
@@ -1,56 +1,56 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<style>
+    @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap');
+</style>
 
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="initial-scale=1, width=device-width" />
-
-  <link rel="stylesheet" href="./kreed.css" />
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Header met Kreed</title>
+    <link rel="stylesheet" href="kreed.css">
 </head>
 
 <body>
-  <div class="hero-13">
-    <div class="background"></div>
-    <img class="skull-icon" alt="" src="img/Group 38.png" /><img class="skull-icon" alt="" src="img/stuff.png" />
-
-    <div class="text">
-      <b class="ghost-in-the">Ghost in the Shell</b>
-      <div class="lorem-ipsum-dolor">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-        minim veniam, quis nostrud exercitation
-      </div>
-    </div>
-    <div class="button">
-      <div class="button1"></div>
-      <div class="watch-now-button">
-        <div class="watch-now">Watch Now</div>
-        <img class="play-sign-icon" alt="" src="/HeroHeader/playsign.png" />
-      </div>
-    </div>
-    <div class="scroll">
-      <div class="cpu-mouse">
-        <div class="round"></div>
-        <img class="klik-icon" alt="" src="/HeroHeader/playsign.png" />
-      </div>
-      <div class="scroll1">Scroll</div>
-    </div>
-    <div class="navigation">
-      <div class="logo">
-        <div class="kreed">Kreed</div>
-        <div class="logo1">
-          <div class="rectangle-around-logo"></div>
-          <img class="k-icon" alt="" src="/HeroHeader/K..png" />
-        </div>
-      </div>
-      <div class="home-about-us">Home About us How it works Contact</div>
-      <div class="login">
-        <div class="button2"></div>
-        <div class="login1">Login</div>
-      </div>
-    </div>
-  </div>
+    <header>
+        <nav>
+            <div class="logo">
+                <div class="logo-box">
+                    <img src="images/K.svg">
+                </div>
+                <span class="logo-title">Kreed</span>
+            </div>
+            <ul class="nav-menu">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About us</a></li>
+                <li><a href="#">How it works</a></li>
+                <li><a href="#">Contact</a></li>
+                <li><a href="#"><span class="login-box">Login</span></a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section>
+            <div class="flex-container">
+                <div class="tekst">
+                    <h1>GHOST IN THE SHELL</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore
+                        et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
+                    <div>
+                        <button class="watch-button">
+                            Watch now <span class="icon">▶</span>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="muis">
+                <img src="images/mouse.svg" alt="muis icoon">
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
