--- a/HeroHeader/kreed.html
+++ b/HeroHeader/kreed.html
@@ -7,16 +7,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Header met Kreed</title>
+    <title>Kreed</title>
     <link rel="stylesheet" href="kreed.css">
 </head>
 
 <body>
+
     <header>
         <nav>
             <div class="logo">
                 <div class="logo-box">
-                    <img src="images/K.svg">
+                    <img src="img/K.svg">
                 </div>
                 <span class="logo-title">Kreed</span>
             </div>
@@ -43,11 +44,17 @@
                         </button>
                     </div>
                 </div>
+                <div class="skull">
+                    <img sizes="(max-width: 1440px) 100vw, 1440px" srcset="
+                    img/Skull_Phone.svg 320w,
+                    img/Skull_Tablet.svg 768w,
+                    img/Skull_PC.svg 1440w" src="img/Skull_PC.svg" alt="Skull">
+                </div>
             </div>
         </section>
         <section>
             <div class="muis">
-                <img src="images/mouse.svg" alt="muis icoon">
+                <img src="img/mouse.svg" alt="muis icoon">
             </div>
         </section>
     </main>
