--- a/HeroHeader/kreed.html
+++ b/HeroHeader/kreed.html
@@ -21,6 +21,11 @@
                 </div>
                 <span class="logo-title">Kreed</span>
             </div>
+            </div>
+            <input type="checkbox" id="burger">
+            <label for="burger">
+                <i class="fa-solid fa-bars"></i>
+            </label>
             <ul class="nav-menu">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About us</a></li>
